--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 
     <groupId>org.example</groupId>
     <artifactId>Testing-Assignment-4</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <version>0.0.1</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
