--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,20 @@ jobs:
     # - name: Update dependency graph
     #  uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
+  code_coverage:
+    runs-on: ubuntu-latest
+    needs: build_test
+    steps:
+    - name: Generate Code Coverage Report
+      id: code-coverage
+      uses: barecheck/code-coverage-action@v1
+      with:
+        barecheck-github-app-token: ${{ secrets.BARECHECK_GITHUB_APP_TOKEN }}
+        lcov-file: "./coverage/lcov.info"
+        base-lcov-file: "./coverage/base-lcov.info"
+        send-summary-comment: true
+        show-annotations: "warning"
+
   publish-job:
     runs-on: ubuntu-latest
     needs: build_test
