--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,14 +27,8 @@ jobs:
         cache: maven
     - name: Install dependencies
       run: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-    - name: Run tests and collect coverage
-      run: mvn -B test
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_ORG_TOKEN }}
-    # - name: Build with Maven
-    #   run: mvn -B package --file pom.xml
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # - name: Update dependency graph
@@ -55,17 +49,3 @@ jobs:
         with:
           name: Package
           path: staging
-
-  code_coverage:
-    runs-on: ubuntu-latest
-    needs: publish-job
-    steps:
-    - name: Generate Code Coverage Report
-      id: code-coverage
-      uses: barecheck/code-coverage-action@v1
-      with:
-        barecheck-github-app-token: ${{ secrets.BARECHECK_GITHUB_APP_TOKEN }}
-        lcov-file: "./coverage/lcov.info"
-        base-lcov-file: "./coverage/base-lcov.info"
-        send-summary-comment: true
-        show-annotations: "warning"
