--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,9 @@
-name: Workflow for Codecov example-java-maven
-on: [push, pull_request]
+name: Code Coverage Workflow
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 jobs:
   run:
     runs-on: ubuntu-latest
